--- a/src/components/burgermenu/burger-menu.css
+++ b/src/components/burgermenu/burger-menu.css
@@ -1,10 +1,8 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
-    position: fixed;
+    position: relative;
     width: 36px;
     height: 30px;
-    right: 36px;
-    top: 100px;
   }
   
   /* Color/shape of burger icon bars */
@@ -32,9 +30,10 @@
   Sidebar wrapper styles
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
-  .bm-menu-wrap {
+  .bm-menu-wrap, .bm-overlay {
     position: fixed;
-    height: 100%;
+    left: 0 !important; 
+    top: 0 !important; 
   }
   
   /* General sidebar styles */
@@ -64,4 +63,7 @@
   /* Styling of overlay */
   .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    left: 0 !important; 
+    top: 0 !important; 
   }
